<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting"
            app:itemTextAppearance="@style/menu_item_style"

            />
        <item
            android:id="@+id/nav_franshise"
            android:title="@string/franshise"
            app:itemTextAppearance="@style/menu_item_style"
            />
        <item
            android:id="@+id/nav_events"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_training"
            android:title="@string/training" />
        <item
            android:id="@+id/nav_services"
            android:title="@string/services" />
        <item
            android:id="@+id/nav_jobs"
            android:title="@string/jobs" />
        <item
            android:id="@+id/nav_terms"
            android:title="@string/terms" />
        <item
            android:id="@+id/nav_subscriptions"
            android:title="@string/subscriptions" />
        <item
            android:id="@+id/nav_funding"
            android:title="@string/funding_companies"/>
        <item
            android:id="@+id/nav_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_questions"
            android:title="@string/questions" />
        <item
            android:id="@+id/nav_Complaints"
            android:title="@string/Complaints" />

        <item
            android:id="@+id/nav_myfranchises"
            android:title="@string/myfranchise" />

        <item
            android:id="@+id/nav_contact"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_language"
            android:title="@string/language" />



    </group>

</menu>
