<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activites.Setting"
    tools:showIn="@layout/app_bar_setting"
    android:orientation="vertical"
    android:background="@color/send_blue">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_subscribtion_button"
    >
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/setting"
        android:textSize="20dp"
        android:textStyle="bold"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        />
</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:weightSum="10"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/notification"
            android:layout_gravity="start"
            />
        <ImageView
            android:layout_width="0dp"
            android:id="@+id/notify_image"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:src="@drawable/lock"
            android:layout_gravity="end"/>
    </LinearLayout>

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="30dp"
android:text="@string/data"
        />
    <TextView
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/change_password"
        />


</LinearLayout>